--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,33 @@
 
 <body>
   <app-root></app-root>
+
+
 </body>
+<!-- <footer class="footer">
+  <div class="footer-content">
+    <div class="footer-left">
+      <p><strong>⚐ Abdul Kader</strong> <a href="https://dev-shohan.netlify.app/">https://dev-shohan.netlify.app/</a>
+      </p>
+      <p>Frontend Engineer & React Native developer based in Bangladesh</p>
+    </div>
+    <div class="footer-right">
+      <div class="social-media">
+        <p>Social Media</p>
+        <div class="icons">
+          <a href="#"><img src="github-icon.png" alt="GitHub"></a>
+          <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+          <a href="#"><img src="telegram-icon.png" alt="Telegram"></a>
+          <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+          <a href="#"><img src="discord-icon.png" alt="Discord"></a>
+        </div>
+      </div>
+      <p>Special Thanks to Elias Dev for sharing this UI/UX design with Figma Community</p>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>© 2025 Abdul Kader Shohan. All rights reserved.</p>
+  </div>
+</footer> -->
 
 </html>
